[project]
name = "quantum-strong-lens-classification"
version = "0.1.0"
description = "A quantum machine learning project for detecting strong gravitational lensing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deeplenstronomy>=0.0.2.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.13"]

[tool.pytest]
pythonpath = ["src"]
