[project]
name = "strong-lens-ml"
version = "0.1.0"
description = "A quantum machine learning project for detecting strong gravitational lensing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astropy>=7.2.0",
    "deeplenstronomy>=0.0.2.3",
    "h5py>=3.16.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.13"]

[tool.pytest]
pythonpath = ["src"]
